Updating chosen library

--- a/sites/all/libraries/chosen/options.html
+++ b/sites/all/libraries/chosen/options.html
@@ -38,7 +38,7 @@
         <tr>
           <td>allow_single_deselect</td>
           <td>false</td>
-          <td>When set to <code class="language-javascript">true</code> on a single select, Chosen adds a UI element which selects the first element (if it is blank).</td>
+          <td>When set to <code class="language-javascript">true</code> on a single select, Chosen adds a UI element which selects the first elment (if it is blank).</td>
         </tr>
         <tr>
           <td>disable_search</td>
@@ -253,7 +253,7 @@
       </table>
 
       <footer>
-        &copy; 2011&ndash;2014 <a href="http://www.getharvest.com/">Harvest</a>. Chosen is licensed under the <a href="https://github.com/harvesthq/chosen/blob/master/LICENSE.md">MIT license</a>.
+        &copy; 2011&ndash;2013 <a href="http://www.getharvest.com/">Harvest</a>. Chosen is licensed under the <a href="https://github.com/harvesthq/chosen/blob/master/LICENSE.md">MIT license</a>.
       </footer>
 
     </div>
